--- a/SailingStory/src/style/_footer.scss
+++ b/SailingStory/src/style/_footer.scss
@@ -3,6 +3,11 @@ footer {
     position: relative;
 }
 
+.contacts_list {
+    display: flex;
+    gap: 20px;
+}
+
 .footer_before {
     position: relative;
 }
