--- a/SailingStory/src/index.scss
+++ b/SailingStory/src/index.scss
@@ -5,22 +5,16 @@
 @import 'style/footer';
 @import 'style/header';
 @import 'style/modal';
+@import 'style/pages/about';
+@import 'style/pages/answers';
+@import 'style/pages/contacts';
 @import 'style/pages/home';
-@import 'style/pages/rental';
-@import 'style/pages/courses';
-@import 'style/pages/trip';
-
-@font-face {
-  font-family: Dancing;
-  src: url('./assets/fonts/DancingScript-Regular.ttf');
-}
+@import 'style/pages/notFound';
+@import 'style/pages/races';
+@import 'style/components/subscribe';
+@import 'style/components/_goYbBtn';
 
 @font-face {
   font-family: Raleway;
-  src: url('./assets/fonts/Raleway-Regular.ttf');
-}
-
-@font-face {
-  font-family: Raleway-varible;
   src: url('./assets/fonts/Raleway.ttf');
 }
