--- a/SailingStory/src/style/_modal.scss
+++ b/SailingStory/src/style/_modal.scss
@@ -1,86 +1,86 @@
-.modal_container {
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(41, 41, 41, 0.6);
-}
+// .modal_container {
+//   position: fixed;
+//   z-index: 1;
+//   padding-top: 100px;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   overflow: auto;
+//   background-color: rgba(41, 41, 41, 0.6);
+// }
 
-.modal_window {
-  position: relative;
-  margin-top: 10px;
-  padding: 24px;
-  width: 100%;
-  color: #213547;
-  border: 2px solid $accent;
-  border-radius: 10px;
-  padding-bottom: 50px;
-}
+// .modal_window {
+//   position: relative;
+//   margin-top: 10px;
+//   padding: 24px;
+//   width: 100%;
+//   color: #213547;
+//   border: 2px solid $accent;
+//   border-radius: 10px;
+//   padding-bottom: 50px;
+// }
 
-.modal_wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin: auto;
-  padding: 0;
-  padding-bottom: 24px;
-  width: 50%;
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
-}
+// .modal_wrapper {
+//   position: relative;
+//   display: flex;
+//   flex-direction: column;
+//   gap: 8px;
+//   margin: auto;
+//   padding: 0;
+//   padding-bottom: 24px;
+//   width: 50%;
+//   border: none;
+//   background-color: rgba(0, 0, 0, 0);
+// }
 
-.close {
-  cursor: pointer;
-  margin-left: auto;
-  width: 16px;
-  height: 16px;
-  color: $accent;
-}
+// .close {
+//   cursor: pointer;
+//   margin-left: auto;
+//   width: 16px;
+//   height: 16px;
+//   color: $accent;
+// }
 
-.close:hover {
-    color: rgb(148, 102, 22);
-}
+// .close:hover {
+//     color: rgb(148, 102, 22);
+// }
 
-.modal_info {
-    text-align: left;
-    display: flex;
-    gap: 20px;
-}
+// .modal_info {
+//     text-align: left;
+//     display: flex;
+//     gap: 20px;
+// }
 
-.modal_additional_info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+// .modal_additional_info {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+// }
 
-.modal_img {
-    width: 400px;
-}
+// .modal_img {
+//     width: 400px;
+// }
 
-.modal_window {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+// .modal_window {
+//   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+//   line-height: 1.5;
+//   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+//   color-scheme: light dark;
+//   color: rgba(255, 255, 255, 0.87);
+//   background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+//   font-synthesis: none;
+//   text-rendering: optimizeLegibility;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+//   -webkit-text-size-adjust: 100%;
+// }
 
-@media (prefers-color-scheme: light) {
-  .modal_window {
-    color: #213547;
-    background-color: #ffffff;
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   .modal_window {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
+// }
