--- a/SailingStory/src/style/_var.scss
+++ b/SailingStory/src/style/_var.scss
@@ -1,9 +1,13 @@
+$background: #373737;
+$background-header: hsla(0, 0%, 14%, 0.7);
+
 $main_color: orange;
 $additional_color: #2b2b2b;
 
-$navLink: rgb(177, 115, 0);
+$navLink: rgb(255, 255, 255);
 $accent: orange;
 $border: 2px solid orange;
 $border_radius: 10px;
 
-// color: $light-gray;
+$answer: rgb(78, 116, 135);
+$question: rgb(120, 120, 143);
